test/type/fail/minus_wrong_second.j
class A{
  Void main() {
    Int a;
    a = 5 - (null);
    return;
  }
}
